--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 certifi==2020.12.5
 chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.2.4
 django-passwords==0.3.12
 django-widget-tweaks==1.4.8
